<resources>
    <string name="app_name">Foliyoo</string>
    <string name="title_activity_home">Foliyoo</string>
    <string name="RobotoRegular">fonts/Avenir_Book.ttf</string>
    <string name="RobotoBold">fonts/Avenir_Heavy.ttf</string>
    <string name="AvenirRegular">fonts/Avenir_Regular.ttf</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in_error_mesage">Enter valid email or mobile number !</string>
    <string name="password_length">Password should be minimum 6  and maximum 12 character length!</string>
    <string name="password_mismatch">New password and Re-enter password mismatch! </string>
    <string name="email_error_mesage">Enter valid email !</string>
    <string name="email_blank">Email should not be blank !</string>
    <string name="mobile_number_error_mesage">Enter valid mobile number !</string>
    <string name="gst_number_error_mesage">Enter valid GST number !</string>
    <string name="gst_blank">GST should not be blank !</string>
    <string name="password_blank">Password should not be blank !</string>
    <string name="password_size_check">Password should not be less than 6 char and more than 12 char !</string>
    <string name="general_error_message">Something went wrong, Try again</string>
    <string name="network_connection"> <string name="error_validating_phone">Check your network connection.</string>
    <string name="phone_verify_text">"Enter 6 digit verification code sent to %1$s  &lt;font color="#fab702"&gt;(change)&lt;/font&gt;"</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_basicload">Basicload</string>
    <string name="nointernet">Please turn on your internet connection</string>
    <string name="servererror">Problem Occurred in server Side</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_forgot_password">Forgot Password ?</string>
    <string name="title_forgot_password">Forgot Password</string>
    <string name="hint_password">Password</string>
    <string name="create_account">No account yet? </string>
    <string name="create_one"> Sign Up</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="permission_message">Permissions are mandatory for smooth use of application.</string>
    <string name="invite">Invite and Earn</string>
    <string name="invitee">Invite</string>
    <string name="logout">Logout</string>
    <string name="support">Support</string>
    <string name="load_bookings">Load Bookings</string>
    <string name="contacts">Contact</string>
    <string name="dashboard">DashBoard</string>
    <string name="search">Search Vechiles, City or Location</string>
    <string name="home">Home</string>
    <string name="bookings">Booking</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="registration_number">Registration Number :</string>
    <string name="enter_registration_number">Enter registration number</string>
    <string name="gst">GST</string>
    <string name="enter_your_gst">Enter your GST</string>
    <string name="pan">PAN</string>
    <string name="enter_your_pan">Enter your PAN</string>
    <string name="legal_name">Legal Name</string>
    <string name="enter_your_legal_name">Enter your legal name</string>
    <string name="enter_your_company_name">Enter your company name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="alternate_number">Alternate Number</string>
    <string name="enter_your_alternate_number">Enter your alternate number</string>
    <string name="enter_your_email_id">Enter your email id</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="click_icon_for_geo_location">Click icon for Geo Location</string>
    <string name="click_icon_for_goden_location">Click icon for Goden Location</string>
    <string name="reset_password">Reset Password</string>
    <string name="btn_update">Update</string>
    <string name="add_contact">Add Contact</string>
    <string name="add_load">Add Load</string>
    <string name="part_load">Part Load</string>
    <string name="box_booking">Box Booking</string>
    <string name="pickup_point">Pickup Point</string>
    <string name="delivery_point">Delivery Point</string>
    <string name="select_truck">Select Truck</string>
    <string name="select_material">Select Material</string>
    <string name="select_date">Select Date</string>
    <string name="add_remark">Add Remark</string>
    <string name="distance_1500_km">Distance : 1500 km</string>
    <string name="estimated_time_need_25_hrs">Estimated Time Need : 25 hrs</string>
    <string name="tol_gate_15_gates">Tol Gate : 15 Gates</string>
    <string name="permit_all_india">Permit : All India</string>
    <string name="next">Next</string>
    <string name="loading_point">Loading Point</string>
    <string name="enter_your_loading_point">Enter your loading point</string>
    <string name="droping_point">Droping Point</string>
    <string name="enter_your_droping_point">Enter Your Droping Point</string>
    <string name="date">Date</string>
    <string name="yyyy_mm_dd">YYYY-MM-DD</string>
    <string name="select_size_of_vehicle">Select Size of Vehicle</string>
    <string name="select_vehicle">Select Vehicle</string>
    <string name="select">Select</string>
    <string name="no_of_vechiles">No.of Vechiles</string>
    <string name="enter_your_no_of_vechiles">Enter Your No.of Vechiles</string>
    <string name="save_and_continue">Save and Continue</string>
    <string name="booking_summary">Booking History</string>
    <string name="contact_list">Contact List</string>
    <string name="contact_details">Contact Details</string>
    <string name="com_name">Company Name -</string>
    <string name="sutherland">sutherland</string>
    <string name="name_of_the_customer">Name of the Customer-</string>
    <string name="sridhar">sridhar</string>
    <string name="mobile_num">Mobile Number -</string>
    <string name="email">Email -</string>
    <string name="gst_num">GST Number -</string>
    <string name="map">Map -</string>
    <string name="no_map">No Map</string>
    <string name="addre">Address -</string>
    <string name="goden_address">Goden Address -</string>
    <string name="customer_support">Customer Support</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="company_name">Company Name</string>
    <string name="enter_company_name">Enter Company Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="gst_number">GST Number</string>
    <string name="enter_gst_number">Enter GST number</string>
    <string name="customer_name">Customer Name</string>
    <string name="enter_customer_name">Enter customer name</string>
    <string name="email_id">Email Id</string>
    <string name="enter_email_id">Enter email id</string>
    <string name="address">Address</string>
    <string name="enter_address">Enter address</string>
    <string name="submit">Submit</string>
    <string name="insurance_provider">Insurance</string>
    <string name="load_booking">Load Booking</string>
    <string name="select_your_load_type">Select your load type</string>
    <string name="full_load">Full Load</string>
    <string name="filter">Filter</string>
    <string name="price">Price</string>
    <string name="rearing">Rearing</string>
    <string name="number_load_completed">Number Load Completed</string>
    <string name="member_ship">Member ship</string>
    <string name="tons">Tons</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="select_address">Select Address</string>
    <string name="material_type">Material Type</string>
    <string name="notification">Notification</string>
    <string name="my_profile">My Profile</string>
    <string name="pan_card_no">PAN Card No</string>
    <string name="name">Name</string>
    <string name="vms_pvt_ltd">VMS pvt ltd</string>
    <string name="geo_location">Geo Location</string>
    <string name="goden_location">Goden Location</string>
    <string name="reference_code">Reference Code</string>
    <string name="we_have_a_gift_for_you_refer_your_friend_and_earn_a_10_discount_voucher_your_refernce_code_is_v52gs1">We have a gift for you! Refer your friend and earn a 10% discount voucher. Your refernce code is v52gs1</string>
    <string name="congratulation">Congratulation</string>
    <string name="category">Category</string>
    <string name="types">Types</string>
    <string name="capicity">Capicity</string>
    <string name="material">Material</string>
    <string name="coupon_discount">Coupon Discount:</string>
    <string name="teanspoter_discount">Teanspoter Discount :</string>
    <string name="membership_discount">Membership Discount :</string>
    <string name="payable_amount">Payable Amount :</string>
    <string name="pay_now">Pay Now</string>
    <string name="policy">Policy:</string>
    <string name="terms_and_conditions">Terms and Conditions :</string>
    <string name="absolute_100_cashless_claims_any_garage_premium_starts_rs_2999_get_quote_dedicated_claim_expert_for_fast_settlement_instant_claim_settlement_for_minor_car_damage_cashless_claim_everywhere_no_paperwork_instant_quote_calculator_irdai_certified_pickup_repair_and_drop">Absolute 100% Cashless Claims @ any Garage. Premium Starts @ Rs.2999. Get Quote! Dedicated Claim Expert For Fast Settlement. Instant Claim Settlement For Minor Car Damage. Cashless Claim Everywhere. No Paperwork. Instant Quote Calculator. IRDAI Certified. Pickup, Repair and Drop.</string>
    <string name="rating">Rating</string>
    <string name="profile">Profile</string>
    <string name="policies">Policies</string>
    <string name="overall_rating">Overall Rating</string>
    <string name="driving">Driving</string>
    <string name="vehicle">Vehicle</string>
    <string name="behaviour">Behaviour</string>
    <string name="wallet">Wallet</string>
    <string name="more">More</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="enter_password">Enter password</string>
    <string name="first_page">First Page</string>
    <string name="second_page">Second Page</string>
    <string name="third_page">Third Page</string>
    <string name="section_format">Page %1$d</string>
    <string name="enter_phone">Please enter your registered mobile number</string>
    <string name="enter_phone_subtext">We will send a verification code to your registered mobile number.</string>
</resources>