<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/phone_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="30dp"
        android:textColor="#000000"
        android:text="@string/enter_phone" />

    <TextView
        android:id="@+id/phone_sub_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorLightDarkGray"
        android:text="@string/enter_phone_subtext" />

    <!-- phone number Label -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp">

        <EditText
            android:id="@+id/input_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:drawablePadding="10dp"
            android:hint="@string/enter_phone_number"
            android:drawableLeft="@drawable/ic_phone"
            android:inputType="phone"
            android:maxLength="10"
            android:textColor="@color/gray_shade_8"
            android:textColorHint="@color/gray_shade_8"
            android:textSize="14dp" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>